# SCIP

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  README.md.template  dask-worker.e41385226  dask-worker.e41385227  dask-worker.e41385228  dask-worker.e41385229  dask-worker.o41385229  install.sh  logging.yml  pre-commit.py  requirements.txt  scip.yml  scip_czi.yml  scip_multi_tiff.yml  scip_tiff.yml  scip_tiff_seg.yml  scip_zarr.yml  setup.cfg  setup.py  sip.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
benchmark_results/: benchmark_20210930224304.csv  benchmark_20210930224331.csv  benchmark_20211001132541.csv  benchmark_20211006164152.csv  benchmark_20211007095037.csv  profile.html
docs/: Makefile
docs/source/: conf.py  index.rst  input.rst  installation.rst  scip.analysis.fuzzy_c_mean.rst  scip.analysis.principal_feature_analysis.rst  scip.analysis.rst  scip.features.rst  scip.features.shape.rst  scip.loading.czi.rst  scip.loading.tiff.rst  scip.loading.zarr.rst  scip.main.rst  scip.masking.felzenswalb.rst  scip.masking.sobel.rst  scip.masking.util.rst  scip.masking.watershed.rst  scip.reports.feature_statistics.rst  scip.reports.rst  scip.test.rst  scip.utils.rst  scip.utils.util.rst  usage.rst
normalization/: __init__.py
notebooks/: Development.ipynb  benchmark_results.ipynb  data_loading_example.ipynb  hog_features.ipynb  image_cropping.ipynb  inspect_features.ipynb  min_max_norm.ipynb  nn_feature_extraction.ipynb  quantile_test_dataset.ipynb  testing_dataset.ipynb  threshold_masking.ipynb  tiff.ipynb
src/: main.py
src/data_features/: feature_extraction.py
src/data_loading/: multiframe_tiff.py
src/data_masking/: mask_apply.py  mask_creation.py
src/data_normalization/: quantile_normalization.py
src/misc/: benchmark_post.py  benchmark_setup.py  plot.py  qsub.pbs  qsub_template.pbs
src/quality_control/: feature_statistics.py  intensity_distribution.py
src/scip/: __init__.py  _version.py  main.py  scalability_benchmark.py  test.py
src/sip/: main.py
src/utils/: util.py
test/: conftest.py  test_cli.py  test_main.py
test/data/: 1.tiff  2.tiff  masked.pickle  masked_meta.pickle  quantile_errors.npy  (+5 more)
(+215 files in other folders)
