[metadata]
name = scip
description =
  Scalable Cytometry Image Processing (SCIP) is an open-source tool that implements an image
  processing pipeline on top of Dask, a distributed computing framework written in Python.
  SCIP performs normalization, image segmentation and masking, and feature extraction.
maintainer = Maxim Lippeveld
author = Maxim Lippeveld
author_email = maxim.lippeveld@ugent.be
license = GPL-2.0-or-later
url = https://github.com/ScalableCytometryImageProcessing/SCIP
project_urls =
  Documentation = https://scalable-cytometry-image-processing.readthedocs.io/en/latest/
  Source = https://github.com/ScalableCytometryImageProcessing/SCIP
  Tracker = https://github.com/ScalableCytometryImageProcessing/SCIP/issues
long_description = file: README.md
long_description_content_type = text/markdown; chartset=UTF-8
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Image Processing

[options]
zip_safe = False
python_requires= >=3.8,<3.10
package_dir =
  =src
packages = find_namespace:
install_requires =
  numpy==1.22
  Pillow
  dask[distributed]<=2022.12.1
  click
  scikit-image>=0.18.0
  pyyaml
  graphviz
  zarr
  pyarrow>=7.0.0
  anndata
  pandas<2.0.0
  numba==0.58.0
  aicsimageio

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
mpi =
  dask_mpi
  mpi4py
cellpose =
  cellpose
czi =
  aicspylibczi
jobqueue =
  dask-jobqueue
dev =
  flake8
  wheel
  pytest
  pytest-cov
  pytest-mpi
  types-PyYAML
  types-setuptools
  sphinx
  sphinx-autobuild
  sphinx-copybutton
  versioneer
  furo

[options.entry_points]
console_scripts =
  scip = scip.main:cli

[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    src/scip/_version.py,
    versioneer.py
ignore = H306
max-complexity = 10

[pytest:run]
omit =
    src/scip/_version.py
    */__init__.py
show_missing = True

[versioneer]
VCS = git
style = pep440
versionfile_source = src/scip/_version.py
versionfile_build = scip/_version.py
tag_prefix = v